# python-project-83

./: .env_example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: project_check.yml
page_analyzer/: __init__.py  app.py  data_base.py  url_validator.py
page_analyzer/templates/: index.html  url_detail.html  urls.html
templates/: index.html
